<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_outline_event_note_24"
            android:title="@string/order"/>
    </group>
</menu>